version 0.8.4 --
  - cleaning up build again.  Rather than having 200 -DDEFINE_ statements
    in our compile lines, we use config.h (like normal people).  =:)  This
    very well may break stuff, but it looks good thus far....

  - adding AM_MAINTAINER_MODE to stop the ever-annoying "here, let me run
    aclocal for you again!!" idiocy of automake and friends

  - fixing things for multi-head displays--replacing
    "getScreenInfo(0)->getRootWindow()," with
    "getCurrentScreenInfo()->getRootWindow(),"  So yes, bbkeys now has
    multi-head support.  Sort of.  You need to have a separate instance of
    bbkeys running against each head ("bbkeys -display :1"), etc.  cat
    complaints >> /dev/null....

  - removing kludgy C command-line configurator with much-improved perl script
    from Damien Tougas (thanks!!!)

  - changing bbkeys.cc to look for bbkeysconf.pl rather than bbkeysConfigC

  - removing showAllWorkspaces from bbkeys.{bb,nobb} config file and making it
    an additional keybinding.  This allows two different ways of showing all
    open windows and navigating through them--one keybinding for the regular
    "NextWindow" variety (as in previous versions of bbkeys, and another
    keybinding, "NextWindowAllWorkspaces", that pops up the window list for
    navigation for windows open on all workspaces. 

  - bugfix....  previously, bbkeys would ignore windows that had no name.  We
    now follow blackbox's lead (and follow blackbox's code) and create a name
    for it, "Unnamed".  Thanks to Damien Terrier for this bug report.




version 0.8.3 --
  - changing external app launch order--we go bbconf, bbkeysconf,
    bbkeysConfigGtk, rxvt, xterm... *phew*

  - fix in stackmenu.cc (hopefully we got it this time?) to fix segfaults
    on some platforms due to screwy X stuff. *shudder*


version 0.8.2 --

  - patched for matrix-style workspace navigation, updating the 0.3.5 patch written
    by Markus Ottenbacher (m.ottenbacher@gmx.de) found at